force-app/main/default/objects/CeuCertification__c/CeuCertification__c.object-meta.xml
<CustomObject>
    <description>Linking table for CEUs and Certifications</description>
    <label>CEU Certification</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>CeuCertification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEU Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>