force-app/main/default/objects/CeuCertification__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Approved</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>