force-app/main/default/objects/CeuCertification__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>CEU Certifications</relationshipLabel>
    <relationshipName>CEU_Certifications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>