force-app/main/default/objects/CeuCertification__c/fields/CEU__c.field-meta.xml
<CustomField>
    <fullName>CEU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CEU</label>
    <referenceTo>CEU__c</referenceTo>
    <relationshipLabel>CEU Certifications</relationshipLabel>
    <relationshipName>CEU_Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>