force-app/main/default/objects/CeuCertification__c/validationRules/Contacts_match.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacts_match</fullName>
    <active>true</active>
    <description>The Contact associated with the Certification and the CEU differ.</description>
    <errorConditionFormula>Certification__r.Contact__c !=  CEU__r.Contact__c</errorConditionFormula>
    <errorMessage>The contact for the CEU and Certification must match</errorMessage>
</ValidationRule>